Revision history for Music-Chord-Progression-Transform

{{$NEXT}}

0.0111 2023-02-03 23:08:18
    - Include O & I in the random transforms.
    - Do not force O to be in the 1st position of all random transforms.

0.0110 2023-02-03 19:34:32
    - Only taskify_tokens() for P, L, and R multiple operations.
    - Remove the local author lib line.

0.0109 2023-02-03 12:08:34
    - Fix logic error in the numeric transform routine.

0.0108 2023-02-03 11:39:04
    - Handle 7th chord NROs for a numeric (random) transform.
    - Improve quality tests.

0.0107 2023-02-02 12:17:38
    - Improve documentation.

0.0106 2023-02-02 12:03:28
    - Fix the eg/transform-chain program.

0.0105 2023-02-02 09:53:12
    - Improve the eg/* programs slightly.

0.0104 2023-02-02 09:44:00
    - Improve documentation.
    - Add negative T transformations to numeric transforms.

0.0103 2023-02-02 06:12:20
    - Improve documentation.

0.0102 2023-02-02 05:52:08
    - Improve the test script.

0.0101 2023-02-02 05:13:27
    - Make the "O" operation return to the original chord.
    - Make the "I" operation the identity - no transformation.
    - Improve documentation.

0.0100 2023-02-02 04:36:16
    - Ported from both the NRO and T modules.