@@ -37,7 +37,7 @@ subtest throws => sub {
 
 subtest default => sub {
     my $obj = new_ok $module;
-    my $got = $obj->generate;
+    my ($got) = $obj->generate;
     my $expect = 4;
     is @$got, $expect, "generated $expect chords";
 };
@@ -46,7 +46,7 @@ subtest transform_array => sub {
     my $obj = new_ok $module => [
         transforms => [qw(O P T2)],
     ];
-    my $got = $obj->generate;
+    my ($got) = $obj->generate;
     no warnings qw(qw);
     my $expect = [[qw(C4 E4 G4)], [qw(C4 D#4 G4)], [qw(D4 F4 A4)]];
     is_deeply $got, $expect, 'generated chords';
@@ -57,7 +57,7 @@ subtest transform_integer => sub {
     my $obj = new_ok $module => [
         transforms => $expect,
     ];
-    my $got = $obj->generate;
+    my ($got) = $obj->generate;
     is @$got, $expect, "generated $expect chords";
 };
 
@@ -66,7 +66,7 @@ subtest transform_base => sub {
         base_note   => 'G',
         base_octave => 5,
     ];
-    my $got = $obj->generate;
+    my ($got) = $obj->generate;
     my $expect = 4;
     is @$got, $expect, "generated $expect chords";
 };
@@ -76,7 +76,7 @@ subtest midinum_format => sub {
         format     => 'midinum',
         transforms => [qw(O)],
     ];
-    my $got = $obj->generate;
+    my ($got) = $obj->generate;
     my $expect = [qw(60 64 67)];
     is_deeply $got->[0], $expect, 'generated 0th chord';
 };
@@ -87,7 +87,7 @@ subtest circular => sub {
         transforms => [qw(I P T2)],
         max        => $expect,
     ];
-    my $got = $obj->circular;
+    my ($got) = $obj->circular;
     is @$got, $expect, "generated $expect chords";
     $expect = [qw(C4 E4 G4)];
     is_deeply $got->[0], $expect, 'generated 0th chord';
@@ -98,7 +98,7 @@ subtest t_quality => sub {
         chord_quality => '7',
         transforms    => [qw(I T1 T2 T-3)],
     ];
-    my $got = $obj->generate;
+    my ($got) = $obj->generate;
     my $expect = 4;
     is @$got, $expect, "generated $expect chords";
     no warnings qw(qw);
@@ -111,7 +111,7 @@ subtest nro_quality => sub {
         chord_quality => '7',
         transforms    => [qw(I C32 C34 C65)],
     ];
-    my $got = $obj->generate;
+    my ($got) = $obj->generate;
     my $expect = 4;
     is @$got, $expect, "generated $expect chords";
     no warnings qw(qw);
